--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  http: ^0.12.1
   audio_service: ^0.11.0
   just_audio: ^0.2.1
+  simple_animations: ^2.2.3
+  animations: ^1.1.2
+  http: ^0.12.1
+  cached_network_image: ^2.3.3
+
 
 dev_dependencies:
   flutter_test:
@@ -46,9 +50,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/placholder.jpg
+    # - images/placholder.jpg 
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
