--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   fluttertoast: ^7.1.1
   adobe_xd: ^1.0.0
   color_thief_flutter: ^1.0.2
+  shared_preferences: ^0.5.12+2
+  provider: ^4.3.2+2
+  progress_indicators: ^0.1.5
+  flutter_slidable: ^0.5.7
 
 dev_dependencies:
   flutter_test:
