--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,9 @@ flutter_icons:
 
 flutter_native_splash:
   image: assets/images/app_icon/app_icon.png
-  color: "FF2D55"
+  color: "FFFFFF"
   android_disable_fullscreen: true
-  android: false
+  android: true
   # flutter_icons:
   #   android: "launcher_icon"
   #   ios: true
