--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^4.3.2+2
   progress_indicators: ^0.1.5
   flutter_slidable: ^0.5.7
+  sqflite: ^1.3.1+2
+  path_provider: ^1.6.22
 
 dev_dependencies:
   flutter_test:
