--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   flutter_slidable: ^0.5.7
   sqflite: ^1.3.1+2
   path_provider: ^1.6.22
+  firebase_core: "0.5.0+1"
+  # firebase_messaging: "^8.0.0-dev.1"
+  firebase_auth: "^0.18.1+2"
+  cloud_firestore: "^0.14.1+3"
+  rules: ^1.2.0+1
 
 dev_dependencies:
   flutter_test:
