--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: "^0.18.1+2"
   cloud_firestore: "^0.14.1+3"
   rules: ^1.2.0+1
+  photo_view: ^0.10.2
 
 dev_dependencies:
   flutter_test:
