--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   cloud_firestore: "^0.14.1+3"
   rules: ^1.2.0+1
   photo_view: ^0.10.2
+  image_downloader: ^0.20.1
+  firebase_messaging: ^7.0.3
+  like_button: ^1.0.4
 
 dev_dependencies:
   flutter_test:
