modale fixed and play all songs added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   image_downloader: ^0.20.1
   firebase_messaging: ^7.0.3
   like_button: ^1.0.4
+  google_sign_in: "^4.5.1"
+  eva_icons_flutter: ^2.0.1
 
 dev_dependencies:
   flutter_test:
