--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,14 +44,31 @@ android {
         targetSdkVersion 28
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionName flutterVersionName 
+    } 
+
+    signingConfigs {
+        release {
+            storeFile file("indiacharts.keystore")
+                storePassword "android"
+                keyAlias "my-key-alias"
+                keyPassword "android"
+        }
+        debug {
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
     }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.debug
             // signingConfig signingConfigs.release
+             signingConfig signingConfigs.debug
             shrinkResources false // ADD THIS LINE
         }
     }
