--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^0.5.12+2
   provider: ^4.3.2+2
   progress_indicators: ^0.1.5
+  animate_do: ^1.7.5
   flutter_slidable: ^0.5.7
   sqflite: ^1.3.1+2
   path_provider: ^1.6.22
