--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,6 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
-
+ios/Runner/GoogleService-Info.plist
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
