added oled mode

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   google_sign_in: "^4.5.1"
   eva_icons_flutter: ^2.0.1
   flutter_xlider: ^3.4.0
+  toggle_switch: ^0.1.9
 
 dev_dependencies:
   flutter_test:
